buildscript {
  repositories {
    mavenCentral()
    maven {
      url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
  }
  dependencies {
    classpath("org.yaml:snakeyaml:2.2")
    classpath("net.serenity-bdd:serenity-gradle-plugin:3.2.3")
  }
}

plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.5.13'
  id 'uk.gov.hmcts.java' version '0.12.50'
  id 'org.owasp.dependencycheck' version '10.0.3'
  id 'com.github.ben-manes.versions' version '0.50.0'
  id 'org.sonarqube' version '4.3.0.3225'
  id 'au.com.dius.pact' version '4.2.14'
  id 'info.solidsoft.pitest' version '1.15.0'
  id 'com.adarshr.test-logger' version '3.2.0'
}

apply plugin: 'java'
apply plugin: "net.serenity-bdd.serenity-gradle-plugin"
apply plugin: 'project-report'

mainClassName = 'uk.gov.hmcts.reform.iahomeofficeintegrationapi.Application'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }

  contractTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/contractTest/java')
    }
    resources.srcDir file('src/contactTest/resources')
  }
}

processFunctionalTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(Test) {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {

  systemProperty "scenario", System.getProperty('scenario')

  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  finalizedBy aggregate
  testLogging {
    showStandardStreams = true
    showCauses = true
    showExceptions = true
    showStackTraces = true
  }
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
}

task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

task contract(type: Test, description: 'Runs the pact contract tests.', group: 'Verification') {
  description = "Runs the consumer Pact tests"
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

checkstyle {
  maxWarnings = 0
  toolVersion = '10.12.0'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = "6.55.0"
  ignoreFailures = true
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
//  ruleSetFiles = files("config/pmd/ruleset.xml")
  ruleSets = [
          'category/java/errorprone.xml',
          'category/java/bestpractices.xml'
  ]
}

jacoco {
  toolVersion = "0.8.11"
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required.set(true)
    csv.required.set(false)
    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
  }
}

sonarqube {
  properties {
    property "sonar.projectName", "IA :: Immigration & Asylum Home Office Integration API"
    property "sonar.projectKey", "IAHOMEOFFICEINTEGRATIONAPI"
    property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iahomeofficeintegrationapi/infrastructure/config/**," +
            "src/main/java/uk/gov/hmcts/reform/iahomeofficeintegrationapi/Application.java"
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
  }
}

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport

pitest {
  junit5PluginVersion = '1.1.2'
  targetClasses = ['uk.gov.hmcts.reform.iahomeofficeintegrationapi.*']
  excludedClasses = [
          'uk.gov.hmcts.reform.iahomeofficeintegrationapi.infrastructure.config.*',
          'uk.gov.hmcts.reform.iahomeofficeintegrationapi.Application',
          'uk.gov.hmcts.reform.iahomeofficeintegrationapi.CcdScenarioRunnerTest'
  ]
  threads = 10
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  failWhenNoMutations = false
  verbose = true
  mutationThreshold = 70
}

project.tasks['pitest'].group = "Verification"


dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

dependencyCheck {
  suppressionFile = 'https://raw.githubusercontent.com/hmcts/ia-owasp-suppressions/refs/heads/master/ia-home-office-integration-api/suppressions.xml'
  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.2"
  }
  dependencies {
    dependency group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
    dependency group: 'org.yaml', name: 'snakeyaml', version: '2.4'

    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.19.1') {
      entry 'jackson-databind'
      entry 'jackson-core'
      entry 'jackson-annotations'
    }

    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.19.1') {
      entry 'jackson-dataformat-yaml'
      entry 'jackson-dataformat-cbor'
    }

    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.19.1') {
      entry 'jackson-datatype-jsr310'
      entry 'jackson-datatype-jdk8'
    }

    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.19.1') {
      entry 'jackson-module-parameter-names'
      entry 'jackson-module-afterburner'
    }
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}

ext.libraries = [
        junit5: [
                "org.junit.jupiter:junit-jupiter-api:5.13.3",
                "org.junit.jupiter:junit-jupiter-engine:5.13.3",
                "org.junit.jupiter:junit-jupiter-params:5.13.3",
                "org.junit.platform:junit-platform-commons:1.13.3",
                "org.junit.platform:junit-platform-engine:1.13.3",
                'org.junit.platform:junit-platform-launcher:1.13.3'
        ]
]

configurations {
  integrationTestImplementation.extendsFrom testImplementation
  integrationTestCompile.extendsFrom testCompile
  integrationTestRuntime.extendsFrom testRuntime
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestCompile.extendsFrom testCompile
  functionalTestRuntime.extendsFrom testRuntime
  contractTestImplementation.extendsFrom testImplementation
  contractTestCompile.extendsFrom testCompile
  contractTestRuntime.extendsFrom testRuntime
}

dependencies {
  modules {
    module("org.codehaus.groovy:groovy") {
      replacedBy("org.apache.groovy:groovy", "conflicts in current rest-assured version")
    }
    module("org.codehaus.groovy:groovy-xml") {
      replacedBy("org.apache.groovy:groovy-xml", "conflicts in current rest-assured version")
    }
    module("org.codehaus.groovy:groovy-json") {
      replacedBy("org.apache.groovy:groovy-json", "conflicts in current rest-assured version")
    }
  }
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'

  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'

  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'

  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '7.0.0'

  implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '3.2.0'

  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.17'

  implementation group: 'org.apiguardian', name:'apiguardian-api', version: '1.1.2'

  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '10.9'

  implementation group: 'net.minidev', name: 'json-smart', version: '2.6.0'

  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
  implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'

  implementation group: "jakarta.servlet", name: "jakarta.servlet-api", version: "6.1.0"
  implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.32'
  implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.32'
  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '9.0'

//  implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.18.8'
  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '4.0.7'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.13.2'

  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'

  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.54'
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.54'

  annotationProcessor 'org.projectlombok:lombok:1.18.44'
  implementation 'org.projectlombok:lombok:1.18.44'

  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.12'

  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'

  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.23.0'
  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.23.0'
  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '4.3.3'
  testImplementation group: 'org.springframework.security', name: 'spring-security-test'

  testImplementation group: 'org.pitest', name: 'pitest', version: '1.15.3'
  testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.5.0'
  testImplementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: '0.5'

  testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '4.4.2'

  testImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: '5.5.7'
  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'
  testImplementation group: 'io.rest-assured', name: 'json-path', version: '5.5.7'
  testImplementation group: 'io.rest-assured', name: 'xml-path', version: '5.5.7'

  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: '3.9.8'
  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '3.9.8'
  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '3.9.8'
  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '3.9.8'

  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
    exclude group: 'commons-io', module: 'commons-io'
    exclude group: 'org.apache.commons', module: 'commons-lang3'
  }

  //pact contract testing
  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: '4.6.20'

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath

  contractTestImplementation sourceSets.main.runtimeClasspath
  contractTestImplementation sourceSets.test.runtimeClasspath

  testImplementation group: 'com.networknt', name: 'json-schema-validator', version: '1.0.87'
}

project.ext {
  pacticipant = 'ia_homeOfficeIntegrationApi'
  pacticipantVersion = getCheckedOutGitCommitHash()
}

task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test to broker.', group: 'Verification') {
  onlyIf {
    return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
  }
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  systemProperty 'pact.rootDir', "pacts"
}

runAndPublishConsumerPactTests.finalizedBy pactPublish

pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = 'pacts'
    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
    version = project.pacticipantVersion
  }
}

def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}

bootJar {
  getArchiveFileName().set(provider {
    'ia-home-office-integration-api.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}


testlogger {
  theme 'standard'
  showExceptions true
  showStackTraces true
  showFullStackTraces false
  showCauses true
  slowThreshold 5000
  showSummary true
  showSimpleNames false
  showPassed true
  showSkipped true
  showFailed true
  showStandardStreams false
  showPassedStandardStreams true
  showSkippedStandardStreams true
  showFailedStandardStreams true
}

